make a tweets clickable fix #1183
Former-commit-id: adfcea38609bb2d3a9e22c2f69b3c9b7887d2905 [formerly ab8440dee6c857afc4522c9b21ecdc0ba927c02c] [formerly 9c06623320a3dd1977b808207b1158044c9cbb63 [formerly 18ac3b67aaf3794c5aaa42f0e7d4439bb080d330]]
Former-commit-id: a91d3502d6b7746194d8561f0a9963b66f1a59b9 [formerly 51a4d7c149e3f7c2b5ce39cc02e299d5a6e61840]
Former-commit-id: 1ca41bc4180a3025e9026e6cbbcb2e73b342c7a5

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -176,22 +176,19 @@
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
 
-                   <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" class="profile-link">
+                   <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" target="new" class="profile-link">
                       <%= tweet.author_name %>
                    </a>
                 </div>
-                <div class="screenname">
-                  <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" class="profile-link">
-                      <%= tweet.author_name %>
-                  </a>
-
-                </div>
+                
               </div>
           </div> 
           <div class="textbody">
               <div class="pitch">
+                <a href="/#/discovers/show/<%= tweet.id %>topic-<%=tweet.topic %>" target="new"  >
                 <p  class="contact-title" ng-model="tweet.content" parse-url="props">
                 </p>
+              </a>
               </div>
               <div class="pitch">
                 <span  class="contact-title" >
