--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -71,7 +71,7 @@
                     </span>
                     <br>
                     <span>
-                      status: <%= user.status %>
+                      {{_('status:')}} <%= user.status %>
                     </span>
 
 
