--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1569,7 +1569,7 @@
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                <input  ng-click="convert(lead)" type="submit" class="btn green" value="Convert this lead">
+                <input  ng-click="convert(lead)" type="submit" class="btn green" value="{{_('Convert this lead')}}">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
             </div>
             </form>
