--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -106,7 +106,7 @@
                                         </span>
                                       </li>
                                       <li>
-                                        <span class="contact-title" >Last updated:  <%=fromNow(account.updated_at)%> </span>
+                                        <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(account.updated_at)%> </span>
                                       </li>
                                     </ul>
 
@@ -1053,11 +1053,11 @@
                                                                      <form class="form-inline newLeadForm" role="form">
                                                                        <div class="form-group sm-group" style="">
                                                                          <label class="sr-only" for="exampleInputEmail2">Field</label>
-                                                                         <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name">
+                                                                         <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="{{_('Enter field name')}}">
                                                                        </div>
                                                                        <div class="form-group sm-group" style="">
                                                                          <label class="sr-only" for="exampleInputEmail2">Value</label>
-                                                                         <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
+                                                                         <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="{{_('Enter a value')}}">
                                                                        </div>
                                                                         <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(customfield,customfields)">Add</button>
                                                                          <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
