--- a/templates/admin/imports/import_new.html
+++ b/templates/admin/imports/import_new.html
@@ -25,7 +25,7 @@
                 {{_("Imports")}} >
                 
             </h2>
-            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(contact)">Create</button>
+            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(contact)">{{_('Create')}}</button>
         </div>
     </div>
 
@@ -34,13 +34,13 @@
     <div class="loader-container row" ng-show="isLoading">
         <div class="loader-dialog col-md-4 col-md-offset-4 ">
             <div class="loader-content">
-                Loading...
+                {{_('Loading...')}}
             </div>
         </div>
     </div>
     <div class="" ng-show="immediateFailed">
         <div class="col-md-12">
-            <h1>Sign-in Button;</h1>
+            <h1>{{_('Sign-in Button;')}}</h1>
             <span id="signin">
                 <span id="myGsignin"></span>
             </span>
@@ -50,8 +50,8 @@
         <div class="col-md-9">
             <div class="row">
                 <div class="showPage col-md-12 newActionsBtn">
-                    <span>Import from Highrise </span>
-                    <button class="btn red newAccountBtn pull-right" ng-click="import(highrise)">Import</button>
+                    <span>{{_('Import from Highrise')}} </span>
+                    <button class="btn red newAccountBtn pull-right" ng-click="import(highrise)">{{_('Import')}}</button>
                     <div class="clearfix"></div>
                 </div>
                 <div class="showPage slimForm col-md-12">
@@ -65,7 +65,7 @@
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <div class="col-md-12">
-                                                        <input type="text" required id="id_key" class="form-control" ng-model="highrise.key" placeholder="Key">
+                                                        <input type="text" required id="id_key" class="form-control" ng-model="highrise.key" placeholder="{{_('Key')}}">
                                                     </div>
                                                 </div>
                                             </div>
@@ -73,18 +73,19 @@
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <div class="col-md-12">
-                                                        <input type="text"  required id="id_server_name" class="form-control" ng-model="highrise.server_name" placeholder="Server Name">
+                                                        <input type="text"  required id="id_server_name" class="form-control" ng-model="highrise.server_name"
+                                                         placeholder='{{_("Server Name")}}' />
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                        
                                     </form>
-                                    <span> How to get a Key? : in highrise welcome page go to "Account & Settings" and choose "My info" and click on "API token".
+                                    <span> {{_('How to get a Key? : in highrise welcome page go to [ Account & Setting ]  and choose [ My info ] and click on [ API token ]')}}.
                                     </span>
                                     <br/>
                                     <span>
-                                        How to get a Server name? : in highrise welcoe page you have url with this form "https://iogrow3.highrisehq.com/" in this case your server name is "iogrow3"
+                                        {{_('How to get a Server name? : in highrise welcoe page you have url with this form [https://iogrow3.highrisehq.com/] in this case your server name is [iogrow3]')}}
                                     </span>
                                     
                                 </div>
