--- a/templates/discovers/discover_new.html
+++ b/templates/discovers/discover_new.html
@@ -32,7 +32,7 @@
     <div class="loader-container row" ng-show="isLoading">
         <div class="loader-dialog col-md-4 col-md-offset-4 ">
             <div class="loader-content">
-                Loading...
+                {{_('Loading...')}}
             </div>
         </div>
     </div>
