Fix the translation ,fix #1123
Former-commit-id: 248480aa4b8f0995a3716296147f1e869c7f9a2e [formerly dffd01ab54c70d8ae4471708ea07cc8eb4550f83] [formerly 8281095d6cfd1274196b15a87a4276b3fb6df746 [formerly e4e823a6426022a4f51501c6c119048e483b91e2]]
Former-commit-id: f1105e2a90f364f0f3b36ea2ae8ae74a3194860a [formerly eb2830b89e0fde9f83f14bcb2c2a616597e5e499]
Former-commit-id: 034176a12c4e7257f3455ea9127cb78715cc75fb

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -204,12 +204,12 @@
                               </ul><div class="slimScrollBar" style="background-color: rgb(161, 178, 189); width: 7px; position: absolute; top: 0px; opacity: 0.4; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; z-index: 99; right: 1px; height: 171.23287671232876px; background-position: initial initial; background-repeat: initial initial;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; background-color: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px; background-position: initial initial; background-repeat: initial initial;"></div></div>
                             </li>
                             <li class="external">
-                              <a href="" ng-click="gotoNewUser()">Add new user <i class="m-icon-swapright"></i></a>
+                              <a href="" ng-click="gotoNewUser()">{{_('Add new user')}} <i class="m-icon-swapright"></i></a>
                             </li>
                         </ul>
                       </li>
                        <li class="dropdown-submenu t-md-menu-inv"  ng-class="{active: selectedTab == 3}">
-                        <a  ng-click="selectedTab = 4;assignedToMe('{{ME}}');" tabindex="-1" href="#">Sort by</a>
+                        <a  ng-click="selectedTab = 4;assignedToMe('{{ME}}');" tabindex="-1" href="#">{{_('Sort by')}}</a>
                         <ul class="dropdown-menu drp-dwn-right">
                             <li>
                         <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 90px;">
