update add to contacts from account details
Former-commit-id: 9e6d6debd6aad5718ad6f0daa0fdec1559804678 [formerly 26319028e34fc958ba4d64e772dcf641d456f589] [formerly d646a7507796e77a699fd9c8aeac95de21486df4 [formerly 17135c0800124f780d58b6f65e1f8705c706cd2b]]
Former-commit-id: adc14c53ab7a97622a2af0c3d4d7ac55f1498527 [formerly 272dc84c0801033b924443348a81752c64242079]
Former-commit-id: 467370eac66be69f33b767460735acb20eb4c113

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1516,7 +1516,7 @@
                                                                   </div>
                                                             </div>
                                                             <div class="iogrow-actions pull-right">
-                                                                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet)" style="padding-right: 7px;"><i class="fa fa-road "></i> Mark as lead</a>
+                                                                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet)" style="padding-right: 7px;"> Add to contacts</a>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                           </div>
