fixing bug on dropdown menu and top filter bar problem when it  not complete the words
Former-commit-id: 316c30ac754e1ca3cdd52eb7c74d4d640eade6e1 [formerly f6af4738df67976e1c870ec44c69ca1329f1595f] [formerly da84056f18dfc4ffd3ab124093e40a5d6d1c117a [formerly a835763c2403c01f19d53093fa7e39ae02ee34cf]]
Former-commit-id: 0c04da4b22f85ff9e6f00276be354fcc93d1e834 [formerly 57f604c39f4206be6089c738f3f5b6064495a84d]
Former-commit-id: 70111fd0de16d2f9983e9b3dc9cea82d24d26a8a

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -303,7 +303,7 @@
                                            </span>
                                         </button>
                                         <button title='{{ _("Delete Task")}}' ng-click="editbeforedelete()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
-                                          <i class="icon-trash"></i>
+                                          <i class="fa fa-trash-o"></i>
                                            <span class="btn-text">
                                             {{ _('Delete')}}
                                            </span>
