--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,52 +49,6 @@
 <div ng-show="isSignedIn">
   <div class="waterfall" ng-show="!isLoading">
     
-	   <div class="dashElement cardDisp" data-span="3">
-		  	<div class="btn-group inCardOptionsBtn">
-		            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
-		             <i class="fa fa-ellipsis-vertical"></i>
-		            </button>
-		            <ul class="dropdown-menu drp-dwn-right " role="menu">
-		              <li>
-		               <a href="" ng-click="showImg(chartObject.imgUrl)">
-		                   <i class="fa fa-print"></i>Print</a>
-		              </li>
-		            </ul>
-		    </div>
-		  	<div class="portlet">
-		  		<div class="portlet-title" style="margin-bottom:0px">
-		  			<div class="caption">
-		  				Forecastable Pipeline per owner 
-		  			</div>
-		  		</div>
-		  		<div class="portlet-body" id="scrollable-chart">
-		  		
-		  			<div google-chart chart="chartOppoByOwner" style="<%=chartOppoByOwner.cssStyle%>"/></div>
-		  		</div>
-		  	</div>
-	  </div>
-	
-
-	   <div class="dashElement">
-			<div class="dashboard-stat green">
-				<div class="visual">
-					<i class="fa fa-bar-chart-o"></i>
-				</div>
-				<div class="details">
-					<div class="number">
-						 <%=total_amount|currency%> 
-					</div>
-					<div class="desc">
-						Forecastable Pipeline
-					</div>
-				</div>
-				<a class="more" href="#/leads/">
-				View more <i class="m-icon-swapright m-icon-white"></i>
-				</a>
-			</div>
-	   </div>
-	
-
 
    <div class="dashElement cardDisp">
 	  	<div class="btn-group inCardOptionsBtn">
@@ -119,70 +73,6 @@
 	  		</div>
 	  	</div>
   </div>
-      <div class="dashElement">
-		<div class="dashboard-stat blue">
-			<div class="visual">
-				<i class="fa fa-user"></i>
-			</div>
-			<div class="details">
-				<div class="number">
-					 <%=total_lead%>
-				</div>
-				<div class="desc">
-					 Leads
-				</div>
-			</div>
-			<a class="more" href="#/leads/">
-			View more <i class="m-icon-swapright m-icon-white"></i>
-			</a>
-		</div>
-   </div>
-     <div class="dashElement cardDisp">
-	  	<div class="btn-group inCardOptionsBtn">
-	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
-	             <i class="fa fa-ellipsis-vertical"></i>
-	            </button>
-	            <ul class="dropdown-menu drp-dwn-right " role="menu">
-	              <li>
-	               <a href="" ng-click="showImg(chartForLeadsSource.imgUrl)">
-	                   <i class="fa fa-print"></i>Print</a>
-	              </li>
-	            </ul>
-	    </div>
-	  	<div class="portlet">
-	  		<div class="portlet-title" style="margin-bottom:0px">
-	  			<div class="caption">
-	  				Leads source
-	  			</div>
-	  		</div>
-	  		<div class="portlet-body">
-	  			<div id="testChart" google-chart chart="chartForLeadsSource" on-ready="testredy('test test')" style="<%=chartForLeadsSource.cssStyle%>"/></div>
-	  		</div>
-	  	</div>
-  </div> 
-  <div class="dashElement cardDisp" data-span="2">
-	  	<div class="btn-group inCardOptionsBtn">
-	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
-	             <i class="fa fa-ellipsis-vertical"></i>
-	            </button>
-	            <ul class="dropdown-menu drp-dwn-right " role="menu">
-	              <li>
-	               <a href="" ng-click="showImg(leadByOwnerChart.imgUrl)">
-	                   <i class="fa fa-print"></i>Print</a>
-	              </li>
-	            </ul>
-	    </div>
-	  	<div class="portlet">
-	  		<div class="portlet-title" style="margin-bottom:0px">
-	  			<div class="caption">
-	  				Leads per owner
-	  			</div>
-	  		</div>
-	  		<div class="portlet-body" id="scrollable-chart2">
-	  			<div google-chart chart="chartForLeadsOwner" style="<%=chartForLeadsOwner.cssStyle%>"/></div>
-	  		</div>
-	  	</div>
-  </div> 
   <div class="dashElement cardDisp">
 	  	<div class="btn-group inCardOptionsBtn">
 	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
@@ -206,6 +96,114 @@
 	  		</div>
 	  	</div>
   </div>  
+    <div class="dashElement">
+		<div class="dashboard-stat blue">
+			<div class="visual">
+				<i class="fa fa-user"></i>
+			</div>
+			<div class="details">
+				<div class="number">
+					 <%=total_lead%>
+				</div>
+				<div class="desc">
+					 Leads
+				</div>
+			</div>
+			<a class="more" href="#/leads/">
+			View more <i class="m-icon-swapright m-icon-white"></i>
+			</a>
+		</div>
+   </div>
+   	   <div class="dashElement">
+			<div class="dashboard-stat green">
+				<div class="visual">
+					<i class="fa fa-bar-chart-o"></i>
+				</div>
+				<div class="details">
+					<div class="number">
+						 <%=total_amount|currency%> 
+					</div>
+					<div class="desc">
+						Forecastable Pipeline
+					</div>
+				</div>
+				<a class="more" href="#/leads/">
+				View more <i class="m-icon-swapright m-icon-white"></i>
+				</a>
+			</div>
+	   </div>
+	     <div class="dashElement cardDisp" data-span="2">
+	  	<div class="btn-group inCardOptionsBtn">
+	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+	             <i class="fa fa-ellipsis-vertical"></i>
+	            </button>
+	            <ul class="dropdown-menu drp-dwn-right " role="menu">
+	              <li>
+	               <a href="" ng-click="showImg(leadByOwnerChart.imgUrl)">
+	                   <i class="fa fa-print"></i>Print</a>
+	              </li>
+	            </ul>
+	    </div>
+	  	<div class="portlet">
+	  		<div class="portlet-title" style="margin-bottom:0px">
+	  			<div class="caption">
+	  				Leads per owner
+	  			</div>
+	  		</div>
+	  		<div class="portlet-body" id="scrollable-chart2">
+	  			<div google-chart chart="chartForLeadsOwner" style="<%=chartForLeadsOwner.cssStyle%>"></div>
+	  		</div>
+	  	</div>
+  </div> 
+     <div class="dashElement cardDisp">
+	  	<div class="btn-group inCardOptionsBtn">
+	            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+	             <i class="fa fa-ellipsis-vertical"></i>
+	            </button>
+	            <ul class="dropdown-menu drp-dwn-right " role="menu">
+	              <li>
+	               <a href="" ng-click="showImg(chartForLeadsSource.imgUrl)">
+	                   <i class="fa fa-print"></i>Print</a>
+	              </li>
+	            </ul>
+	    </div>
+	  	<div class="portlet">
+	  		<div class="portlet-title" style="margin-bottom:0px">
+	  			<div class="caption">
+	  				Leads source
+	  			</div>
+	  		</div>
+	  		<div class="portlet-body">
+	  			<div id="testChart" google-chart chart="chartForLeadsSource" on-ready="testredy('test test')" style="<%=chartForLeadsSource.cssStyle%>"></div>
+	  		</div>
+	  	</div>
+  </div> 
+
+
+  	   <div class="dashElement cardDisp" data-span="3">
+		  	<div class="btn-group inCardOptionsBtn">
+		            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+		             <i class="fa fa-ellipsis-vertical"></i>
+		            </button>
+		            <ul class="dropdown-menu drp-dwn-right " role="menu">
+		              <li>
+		               <a href="" ng-click="showImg(chartObject.imgUrl)">
+		                   <i class="fa fa-print"></i>Print</a>
+		              </li>
+		            </ul>
+		    </div>
+		  	<div class="portlet">
+		  		<div class="portlet-title" style="margin-bottom:0px">
+		  			<div class="caption">
+		  				Forecastable Pipeline per owner 
+		  			</div>
+		  		</div>
+		  		<div class="portlet-body" id="scrollable-chart">
+		  		
+		  			<div google-chart chart="chartOppoByOwner" style="<%=chartOppoByOwner.cssStyle%>"></div>
+		  		</div>
+		  	</div>
+	  </div>
  
 
   <!--<div class="col-md-3 dashElement">
