add links to social and website in all tabs fix #1207
Former-commit-id: 32f2beb496d2f03e3eb0b44a5b1c163c9167104c [formerly 19f2a61120d8cecba0ce09df1c626d5f4e4f0feb] [formerly 784166738fbb799c43321076a9881c4011a68245 [formerly de7566e37a06159a7c2e195a74dc8a98c9b87b47]]
Former-commit-id: a37a763655edfd5cae9207d4bcb5c5c19e40dfa7 [formerly 0ed7c0a478072a42b1ac6b6ba15c858cc39c790a]
Former-commit-id: 9445303cc2a26dc3c6ad72fb2dab35e63128aa5a

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -367,7 +367,7 @@
                                                         </div>
                                                     </li>
                                                     <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')" ><%=website.url%></a>
-                                                        <a href="<%=website.url%>" target="new" class="icon-link" ></a>
+                                                        <a href="<%=website.url%>" target="new" class="fa fa-link" ></a>
 
                                                      </li>
                                                     <li>
@@ -391,7 +391,7 @@
                                                         </div>
                                                     </li>
                                                     <li ng-repeat="sociallink in infonodes.sociallinks"><a editable-text="sociallink.url" onbeforesave="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,$data)" href="<%=sociallink.url%>" target="_blank" editoptions editdataattr="deleteInfonode('<%=sociallink.entityKey%>','sociallinks')"> <%=sociallink.url%> </a>
-                                                        <a href="<%=sociallink.url%>" target="new"  class="icon-link" ></a>
+                                                        <a href="<%=sociallink.url%>" target="new"  class="fa fa-link" ></a>
                                                     </li>
                                                     <li>
                                                         <a class="btn-link addAnotherPhone" ng-hide="showSociallinkForm" ng-click="showSociallinkForm = true"><i class="icon-plus"></i> {{_('Add a new social links')}} </a>
