--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -367,7 +367,7 @@
                                       </div>
                             </li>
                           <li  ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')"><%=website.url%></a> 
-                            <a href="<%=website.url%>" target="new" class="icon-link" ></a>
+                            <a href="<%=website.url%>" target="new" class="fa fa-link" ></a>
 
                           </li>
                           <li>
@@ -399,7 +399,7 @@
                                           </div>
                             </li>
                           <li ng-repeat="sociallink in infonodes.sociallinks"><a editable-text="sociallink.url" onbeforesave="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,$data)" href="<%=sociallink.url%>" editoptions editdataattr="deleteInfonode('<%=sociallink.entityKey%>','sociallinks')"  target="_blank"> <%=sociallink.url%> </a>
-                            <a href="<%=sociallink.url%>" target="new" class="icon-link" ></a>
+                            <a href="<%=sociallink.url%>" target="new" class="fa fa-link"></a>
                           </li>
                           <li>
                              <a class="btn-link addAnotherPhone" ng-hide="showSociallinkForm" ng-click="showSociallinkForm=true"><i class="icon-plus"></i> {{ _('Add a new social links')}} </a>
