Add new topic must be displayed when there are some topics in discovery list page fix #1206
Former-commit-id: 877bc71b1e95639e86d251f1211808cefedca4ad [formerly 3d69488bc5f9b587e2bca5ad0096c7ef055ecb89] [formerly aafd0daa59514a0e52a99b4ec0199619a66e134e [formerly 1486b4b7d6dd4c33b1c2e8e93223762128448c2a]]
Former-commit-id: 9f1f54603342d9af912343b3e2c6f7ad18855434 [formerly a5e036fcbb8980e3c5eda781c10ee1daea85d2f7]
Former-commit-id: 1dc46efb15467b09864eb17f3104b12d02596c77

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -272,7 +272,7 @@
         </div>  
       </div>
       <div class="portlet-body">
-
+<div class="row">
         <ul id="slimList" class="list-group tags-list ">
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
@@ -294,12 +294,14 @@
               <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
             </div>
           </li>
-          <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
+          </ul>
+          <li class="list-group-item tags-list-item" ng-hide="showNewTag"  style="border:none;margin-bottom:5px;" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  {{ _('Add a new topic')}}
             </a>
           </li>
-        </ul>
+
+        </div>
         <form class="well newTagForm" role="form" ng-show="showNewTag">
           <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
           <div class="row">
