--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -339,7 +339,7 @@
         </div>
       </div>
       <div class="portlet-body">
-        <ul class="list-group tags-list" >
+        <ul class="list-group tags-list scrollList" >
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
               <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
@@ -357,7 +357,7 @@
             </div>
           </li>
         </ul>
-        <div class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
+        <div class="list-group-item tags-list-item" style="border:none;margin-bottom:5px;"  ng-hide="showNewTag" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  {{ _('Add a new label')}}
             </a>
@@ -585,6 +585,9 @@
         }
     }
     handleUniform();
+    $('.scrollList').slimScroll({
+          height:'205px'
+        });
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
 $('#slimList').slimScroll({});
 </script>
