--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -340,7 +340,7 @@
             </div>
           </div>
           <div class="portlet-body">
-            <ul class="list-group tags-list">
+            <ul class="list-group tags-list scrollList">
               <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
                 <div class="row">
                   <span  editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" draggable class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
@@ -499,6 +499,9 @@
         }
     }
     handleUniform();
+    $('.scrollList').slimScroll({
+          height:'205px'
+        });
    $('.waterfall').waterfall({
         colMinWidth: 210,
         defaultContainerWidth: 800,
